--- a/sec.html
+++ b/sec.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js"></script>
-  <script src="sjcl.js"></script>
+  <script src="sec.js"></script>
 </head>
 
 <body>
