--- a/sec.html
+++ b/sec.html
@@ -55,7 +55,7 @@
             <input type="text" class="form-control" id="totpTxt">
         </div>
         <div class="form-group">
-            <h3><span class="label label-default" id="totpValLabel">123456
+            <h3><span class="label label-default" id="totpValLabel">
                 </span></h3>
         </div>
         <div class="form-group">
@@ -101,6 +101,7 @@
             $('#decodeTotpBtn').click(function () {
                 var totpTxt = $('#totpTxt').val();
                 console.log(totpTxt);
+                var totpVal = 'Unknown';
                 generateTOTP(totpTxt).then((value) => { console.log(value); var totpVal = value; }).catch((error) => { console.error(error); });
                 $('#totpValLabel').val(totpVal);
             })
