--- a/sec.html
+++ b/sec.html
@@ -55,7 +55,7 @@
             <input type="text" class="form-control" id="totpTxt">
         </div>
         <div class="form-group">
-            <h3><span class="label label-default" id="totpValLabel">
+            <h3><span class="label label-default" id="totpValLabel">123456
                 </span></h3>
         </div>
         <div class="form-group">
@@ -101,9 +101,7 @@
             $('#decodeTotpBtn').click(function () {
                 var totpTxt = $('#totpTxt').val();
                 console.log(totpTxt);
-                var totpVal = 'Unknown';
-                generateTOTP(totpTxt).then((value) => { console.log(value); var totpVal = value; }).catch((error) => { console.error(error); });
-                $('#totpValLabel').val(totpVal);
+                generateTOTP(totpTxt).then((value) => { console.log(value); $('#totpValLabel').val(value); }).catch((error) => { console.error(error); });
             })
         });
 
