--- a/sec.html
+++ b/sec.html
@@ -55,12 +55,11 @@
             <input type="text" class="form-control" id="totpTxt">
         </div>
         <div class="form-group">
-            <h3><span class="label label-default" id="totpValLabel">123456
-                </span></h3>
-        </div>
-        <div class="form-group">
             <input class="btn btn-md btn-success" id="decodeTotpBtn" name="decodeTotp" type="submit"
                 value="&nbsp;&nbsp;&nbsp;Decode&nbsp;&nbsp;&nbsp;">
+        </div>
+        <div class="form-group">
+            <h3><span class="label label-success" id="totpValLabel"></span></h3>
         </div>
     </div>
 
